Show icon if no uploaded images or videos Show advanced filter labels instead of values in the All Filters list. Hide description in list view

--- a/src/app/pages/bookstore-suppliers/bookstore-suppliers.html
+++ b/src/app/pages/bookstore-suppliers/bookstore-suppliers.html
@@ -3,7 +3,6 @@
         <div class="content">
             <div class="text">
                 <h1>{model.headline}</h1>
-                <div data-html="subhead" skip="true"></div>
                 <div class="larger-screen" data-html="subhead2" skip="true"></div>
             </div>
         </div>
@@ -47,13 +46,13 @@
             <div>
                 {model.usButtonText}
                 <a href="{model.usButtonUrl}" class="btn primary">
-                    View <i class="fas fa-external-link-alt"></i>
+                    View{' '}<i class="fas fa-external-link-alt"></i>
                 </a>
             </div>
             <div>
                 {model.caButtonText}
                 <a href="{model.caButtonUrl}" class="btn primary">
-                    View <i class="fas fa-external-link-alt"></i>
+                    View{' '}<i class="fas fa-external-link-alt"></i>
                 </a>
             </div>
         </div>
