--- a/src/app/pages/partners/partner-details/partner-details.html
+++ b/src/app/pages/partners/partner-details/partner-details.html
@@ -17,7 +17,7 @@
     </section>
     <div class="scrolling-region">
         <section class="carousel" skip="true"></section>
-        <section>
+        <section if="model.infoUrl">
             <a class="btn primary" href="{model.infoUrl}">{model.infoText}</a>
         </section>
         <hr>
