--- a/src/app/pages/partners/active-filters/filter-remover/filter-remover.html
+++ b/src/app/pages/partners/active-filters/filter-remover/filter-remover.html
@@ -1,4 +1,4 @@
 <template args="model">
-    {model.value}
+    {model.label}
     <button type="button"><i class="fa fa-times"></i></button>
 </template>
