Partner marketplace lightbox (#1655)
* Implement updated partner page with lightbox and book partners on book details page

Cleanup and refactoring
Update data values used
Fix details page partner list
Fix history state bug that breaks partner-marketplace
Partner lightbox
Layout issues
Use CMS data
Include videos in carousel

* Update phone view

* Move partner-marketplace to partners

* Show icon if no uploaded images or videos
Show advanced filter labels instead of values in the All Filters list.
Hide description in list view

* Bookstore page UX fixes

* More Partners UX fixes

--- a/src/app/pages/details/instructor-resource-tab/partners/partners.html
+++ b/src/app/pages/details/instructor-resource-tab/partners/partners.html
@@ -1,14 +1,13 @@
 <template args="model">
     <div class="title-bar">
         {model.title}
-        <a class="filter-for-book" href="/partner-marketplace">See more</a>
+        <a class="filter-for-book" href="/partners">See more</a>
     </div>
     <div class="blurb-scroller">
         <div class="blurbs">
             <a each="blurb in model.blurbs" class="blurb" href="{blurb.url}">
                 <img src="{blurb.image}" alt="">
                 <div class="name">{blurb.name}</div>
-                <div class="description" data-html="blurbs[{$item}].description"></div>
                 <div class="tags">
                     <div if="blurb.cost" class="info">
                         <span class="label">Cost:</span>{blurb.cost}
