Fix put-away icon issues and carousel icon sizing
Constrain icon to available space
Set dialog position to absolute (iphone/Safari put-away icon fix)
Add put-away to detached popovers to make closing them more obvious
Fix lightbox scrolling on mobile

--- a/src/app/pages/partners/controls/controls.html
+++ b/src/app/pages/partners/controls/controls.html
@@ -1,5 +1,10 @@
 <template args="model">
     <div class="button-row {model.triangleClass}" skip="true"></div>
     <div class="other-controls" skip="true"></div>
-    <div class="popover-container" skip="true"></div>
+    <div class="closable-popover">
+        <button class="popover-closer" hidden="{model.putAwayHidden}" type="button">
+            <i class="fa fa-times"></i>
+        </button>
+        <div class="popover-container" skip="true"></div>
+    </div>
 </template>
