--- a/src/app/pages/partners/partner-details/carousel/carousel.scss
+++ b/src/app/pages/partners/partner-details/carousel/carousel.scss
@@ -17,11 +17,14 @@
         }
 
         &.next {
+            border-bottom-left-radius: 0.3rem;
+            border-top-left-radius: 0.3rem;
             right: 0;
         }
     }
 
     .image-row {
+        background-color: ui-color(default-hover);
         display: grid;
         position: relative;
         width: 500%;
@@ -41,12 +44,16 @@
 
         .logo-holder {
             background-color: ui-color(white);
+            padding: 2rem calc(50% - 15rem);
+            max-width: 100%;
+
+            @include width-up-to($phone-max) {
+                padding: 2rem 10%;
+            }
 
             > img {
-                height: auto;
-                max-height: 20rem;
-                max-width: 30rem;
-                width: calc(100% - 2rem);
+                max-height: 100%;
+                max-width: 100%;
             }
         }
     }
