--- a/src/app/pages/partners/partner-details/partner-details.scss
+++ b/src/app/pages/partners/partner-details/partner-details.scss
@@ -46,12 +46,10 @@
             grid-area: title;
         }
         .blurb {
+            display: grid;
             grid-area: blurb;
-
-            .partner-website {
-                float: right;
-                margin-left: 0.7rem;
-            }
+            grid-template-columns: 1fr auto;
+            grid-column-gap: 0.7rem;
         }
         .titles {
             @include body-font(1rem);
