Fix Partner lightbox tags
They drew too tall for Vretta. Tiny fix, so piggybacking it.

--- a/src/app/pages/partners/partner-details/partner-details.scss
+++ b/src/app/pages/partners/partner-details/partner-details.scss
@@ -72,6 +72,7 @@
             grid-area: tags;
             grid-gap: 0.5rem;
             margin-bottom: -0.5rem;
+            max-height: 100%;
 
             @include wider-than($phone-max) {
                 grid-auto-flow: column;
