UX fixes for marketplace and webinars pages
Issue #1667

--- a/src/app/pages/partners/partner-details/partner-details.scss
+++ b/src/app/pages/partners/partner-details/partner-details.scss
@@ -68,6 +68,7 @@
             }
         }
         .tags {
+            align-items: center;
             display: grid;
             grid-area: tags;
             grid-gap: 0.5rem;
