--- a/src/app/pages/partners/partner-details/carousel/carousel.scss
+++ b/src/app/pages/partners/partner-details/carousel/carousel.scss
@@ -38,6 +38,7 @@
 
             img,
             video {
+                max-height: 100%;
                 max-width: calc(100% - 6rem); // leave room for nav buttons
             }
         }
