Move card to front on hover
so the tooltip is over the neighbor's badge

--- a/src/app/pages/details/instructor-resource-tab/partners/partners.scss
+++ b/src/app/pages/details/instructor-resource-tab/partners/partners.scss
@@ -76,6 +76,7 @@
             grid-area: logo;
             justify-self: end;
             margin-top: 0.5rem;
+            z-index: 1;
         }
 
         .name {
