--- a/src/app/pages/partners/results/results.scss
+++ b/src/app/pages/partners/results/results.scss
@@ -33,6 +33,10 @@
                 padding: $normal-margin;
                 text-decoration: none;
 
+                &:hover {
+                    z-index: 1;
+                }
+
                 .logo {
                     justify-self: center;
                 }
