Move tooltips and hardcode tooltip text

--- a/src/app/pages/partners/results/result/result.html
+++ b/src/app/pages/partners/results/result/result.html
@@ -5,7 +5,7 @@
     <div if="model.verifiedFeatures" class="badge">
         <img class="background" src="{model.badgeImage}" alt="verified">
         <i class="checkmark fa fa-check"></i>
-        <div class="tooltip right">
+        <div class="tooltip top">
             {model.verifiedFeatures}
         </div>
     </div>
