--- a/src/app/pages/partners/partner-details/partner-details.html
+++ b/src/app/pages/partners/partner-details/partner-details.html
@@ -4,7 +4,7 @@
         <div if="model.verifiedFeatures" class="badge">
             <img class="background" src="{model.badgeImage}" alt="verified">
             <i class="checkmark fa fa-check"></i>
-            <div class="tooltip right">
+            <div class="tooltip bottom">
                 {model.verifiedFeatures}
             </div>
         </div>
