--- a/src/app/pages/partners/partner-details/partner-details.html
+++ b/src/app/pages/partners/partner-details/partner-details.html
@@ -9,18 +9,9 @@
             </div>
         </div>
         <div class="headline">{model.headline}</div>
-        <div class="blurb">
-            <div data-html="blurb" skip="true"></div>
-            <a if="model.partnerUrl" class="partner-website" href="{model.partnerUrl}">
-                Read more <i class="fas fa-external-link-alt"></i>
-            </a>
-        </div>
-        <div class="titles">
-            <span class="title" each="title in model.titles">{title}</span>
-        </div>
-        <div class="tags">
-            <span each="entry in model.tags" class="tag">{entry.label}: {entry.value}</span>
-        </div>
+        <a if="model.partnerUrl" class="partner-website" href="{model.partnerUrl}">
+            Read more <i class="fas fa-external-link-alt"></i>
+        </a>
     </section>
     <div class="scrolling-region">
         <section class="carousel" skip="true"></section>
@@ -28,6 +19,17 @@
             <a class="btn primary" href="{model.infoUrl}">{model.infoText}</a>
         </section>
         <hr>
-        <section class="main-text" data-html="description" skip="true"></section>
+        <section>
+            <h2>Overview</h2>
+            <div class="main-text" data-html="description" skip="true"></div>
+            <h2>Related Books</h2>
+            <div class="titles">
+                <span class="title" each="title in model.titles">{title}</span>
+            </div>
+            <h2>Related Tags</h2>
+            <div class="tags">
+                <span each="entry in model.tags" class="tag">{entry.label}: {entry.value}</span>
+            </div>
+        </section>
     </div>
 </template>
