--- a/src/styles/mixins/placeholder-selectors.scss
+++ b/src/styles/mixins/placeholder-selectors.scss
@@ -34,6 +34,7 @@
         position: absolute;
         text-align: center;
         width: 25rem;
+        z-index: 1;
 
         &.right {
             left: calc(100% + 1rem);
